[package]
name = "programming-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "lexer",
  "ast",
  "cl_ln"
]

[dependencies]
lexer = { path = "lexer" }
ast = { path = "ast" }
cl_ln = { path = "cl_ln" }
